assets/css/header_dropdown.css
.dropbtn {
  /* background-color: #04AA6D; */
  /* color: white; */
  padding: 16px;
  font-size: 16px;
  border: none;
}

.dropdown {
  position: relative;
  display: inline-block;
}

.dropdown-content {
  display: none;
  position: absolute;
  /* background-color: #f1f1f1; */
  background-color: white;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;
}

.dropdown-content a {
  /* color: black; */
  padding: 12px 16px;
  /* background-color: transparent; */
  /* text-decoration: none; */
  display: block;
}

.dropdown-content a:hover {
  /* background-color: #ddd; */
  background-color: lightgray;
}

.dropdown:hover .dropdown-content {display: block;}

.dropdown:hover .dropbtn {}

/* NOTIFICATIONS */
.notification-icon{
  position: relative;
  top: -3px;
}

.notification-span{
  display: inline-block;
  position: relative;
  top: -5px;
  left: -5px;
  border-radius: 999px;
  background-color: red;
  width: 12px;
  height: 12px;
  font-size: 12px;
  color: white;
  margin-top: 10px;
}

.notification-nb{
  position: relative;
  left: -3px;
  top: -3px;
}

.dropdown-notif {
  /* display: none; */
  overflow: scroll;
  position: absolute;
  left: -150px;
  /* background-color: #f1f1f1; */
  /* height: 300px; */
  max-height: 400px;
  background-color: white;
  max-width: 300px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  width: 250px;
  z-index: 1;
}

.dropdown-notif a:hover {
  /* background-color: #ddd; */
  background-color: lightgray;
}

.notif-link{
  overflow-wrap: break-word;
  word-wrap: break-word;
  text-align: right;
  margin-bottom: 5px;
  /* background-color: red; */
}

.notif-link p{
  /* overflow-wrap: break-word; */
  word-wrap: break-word;
  font-size: 11px;
}

.notif-text{
  overflow-wrap: break-word;
  word-wrap: break-word;
  font-size: 11px;
  /* background-color: black; */
}

.notif-date{
  word-wrap: break-word;
  font-size: 11px;
}

.profile-pic-notif{
  width: 20px;
  height: 20px;
  max-width: 20px;
  max-height: 20px;
  border: 1px solid gray;
  border-style: solid;
  border-radius: 60%;
  float: left;
}

